--- a/server/css/style.css
+++ b/server/css/style.css
@@ -45,7 +45,7 @@ li {
 }
 
 .content-title {
-    font-size: 1rem;
+    font-size: 1.5rem;
     margin: 10px 0;
 }
 
@@ -133,7 +133,7 @@ service
 footer
 -------------------------------------------*/
 #footer {
-    font-size: 0.5rem;
+    font-size: 0.8rem;
     padding: 10px 0;
     text-align: center;
 }
@@ -177,7 +177,31 @@ SP
 /*-------------------------------------------
       keijiban.php
       -------------------------------------------*/
+.kakikomilink {
+    margin: 6vh 0 10% 0;
+}
 
+.add_button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 35px;
+    color: #4D4D4D;
+    border: 1px solid #eae7e7;
+    border-radius: 50%;
+    box-shadow: 1px 1px #00000080;
+    text-decoration: none;
+    position: fixed;
+    bottom: 100px;
+    right: 100px;
+    background: #FFFFFF;
+    width: 60px;
+    height: 60px;
+}
+
+/*-------------------------------------------
+      keijiban_kakikomi.php
+      -------------------------------------------*/
 .question {
     font-weight: bold;
 }
@@ -199,16 +223,16 @@ SP
       form2.php
       -------------------------------------------*/
 
-.title {
+.form_title {
     text-align: center;
-    font-size: 20px;
-    margin-bottom: 20px;
+    font-size: 25px;
+    margin-bottom: 25px;
     font-weight: bold;
 }
 
 .contact-form {
-    border: 1.5px solid black;
-    padding: 50px 30px;
+    /* border: 1.5px solid black; */
+    padding: 50px 40px;
 }
 
 .formlabel {
@@ -216,7 +240,7 @@ SP
     margin-right: 10px;
     width: 130px;
     border-left: 3px solid red;
-    padding-left: 10px;
+    padding-left: 8px;
     font-weight: bold;
 }
 
@@ -226,20 +250,21 @@ form {
 }
 
 .item {
-    overflow: hidden;
-    margin-bottom: 10px;
+    width: 300px;
+    margin-bottom: 15px;
 }
 
 .inputs {
     float: left;
-    width: 300px;
+    width: 465px;
+    margin: 0 auto;
 }
 
 input[type="text"],
 input[type="email"] {
     border: solid 1px black;
     padding: 10px;
-    font-size: 15px;
+    font-size: 18px;
     border-radius: 5px;
 }
 
@@ -247,12 +272,12 @@ textarea {
     border: 1px solid black;
     border-radius: 5px;
     padding: 10px;
-    height: 160px;
+    height: 180px;
     width: 300px;
     font-size: 15px;
 }
 
-.buttonarea {
+.button-area {
     text-align: center;
 }
 
@@ -263,8 +288,8 @@ input[type="submit"] {
     color: black;
     font-size: 17px;
     font-weight: bold;
-    border-radius: 5px;
-    margin: 0 5px;
+    /* border-radius: 5px; */
+    margin: 25px 5px;
     box-shadow: 1px 1px 3px black;
     cursor: pointer;
 }
@@ -277,7 +302,7 @@ input[type="reset"] {
     font-size: 17px;
     font-weight: bold;
     border-radius: 5px;
-    margin: 0 5px;
+    margin: 25px 5px;
     box-shadow: 1px 1px 3px black;
     cursor: pointer;
 }
@@ -289,7 +314,7 @@ input[type="reset"] {
     background-color: #749ee6;
     border-radius: 10px;
     width: 500px;
-    height: 500px;
+    height: 550px;
     margin: 50px auto;
     padding: 50px;
 }
@@ -302,8 +327,7 @@ input[type="reset"] {
 .name_label,
 .password_label {
     display: block;
-
-    width: 36vw;
+    width: auto;
     margin: 10px 0px;
 }
 
@@ -311,7 +335,7 @@ input[type="email"],
 input[type="text"],
 input[type="password"] {
     display: block;
-    width: 36vw;
+    width: 28vw;
     background-color: #FFFFFF;
     border-radius: 6px;
     margin-bottom: 10px;
@@ -327,18 +351,16 @@ input[type="password"]::placeholder {
 .button_area {
     margin-top: 30px;
     display: flex;
-    width: 36vw;
+    width: 27vw;
     justify-content: space-between;
 }
 
 .signup_button {
-    background: #239bed;
     padding: 15px 0;
-    width: 48%;
-    color: #FFFFFF;
+    width: 50%;
     letter-spacing: 0.5rem;
     text-indent: 0.5rem;
-    border-radius: 30px;
+    /* border-radius: 30px; */
 }
 
 .login_page_button {
@@ -347,8 +369,18 @@ input[type="password"]::placeholder {
     width: 48%;
     background: #000000;
     color: #FFFFFF;
-    border-radius: 30px;
+    /* border-radius: 30px; */
     text-decoration: none;
+    /* background-color: red;
+    border: none;
+    padding: 10px 20px;
+    color: black;
+    font-size: 17px;
+    font-weight: bold;
+    border-radius: 5px;
+    margin: 25px 5px;
+    box-shadow: 1px 1px 3px black;
+    cursor: pointer; */
 }
 
 /*-------------------------------------------
@@ -362,7 +394,7 @@ input[type="password"]::placeholder {
     color: #FFFFFF;
     letter-spacing: 0.5rem;
     text-indent: 0.5rem;
-    border-radius: 30px;
+    /* border-radius: 30px; */
 }
 
 .login_page_button,
@@ -372,16 +404,17 @@ input[type="password"]::placeholder {
     width: 48%;
     background: #000000;
     color: #FFFFFF;
-    border-radius: 30px;
+    /* border-radius: 30px; */
     text-decoration: none;
+    box-shadow: 1px 1px 3px black;
+    cursor: pointer;
 }
 
-/* login.php */
 .login_content {
     background-color: #DDDDDD;
     border-radius: 10px;
     width: 500px;
-    height: 400px;
+    height: 480px;
     margin: 50px auto;
     padding: 50px;
 }
@@ -391,7 +424,7 @@ input[type="password"]::placeholder {
 }
 
 .login_button {
-    border-radius: 30px;
+    /* border-radius: 30px; */
     background: #239bed;
     padding: 15px 0;
     width: 48%;
@@ -401,7 +434,7 @@ input[type="password"]::placeholder {
 }
 
 .signup_page_button {
-    border-radius: 30px;
+    /* border-radius: 30px; */
     text-align: center;
     padding: 15px 0;
     width: 48%;
@@ -410,6 +443,18 @@ input[type="password"]::placeholder {
     text-decoration: none;
 }
 
+/*-------------------------------------------
+      keijiban_kakikomi.php 
+      -------------------------------------------*/
+
+.answer {
+    border: 1px solid black;
+    /* border-radius: 5px; */
+    padding: 10px;
+    height: 160px;
+    width: 465px;
+    font-size: 15px;
+}
 
 /*-------------------------------------------
       signup.php レスポンシブ
@@ -423,17 +468,18 @@ input[type="password"]::placeholder {
     flex-direction: column;
 }
 
-.signup_button {
+.signup_button,
+.login_page_button {
     width: 100%;
     padding: 10px;
 }
 
-.login_page_button {
+/* .login_page_button {
     width: 100%;
     text-align: center;
     margin-top: 5px;
     padding: 10px;
-}
+} */
 
 /*-------------------------------------------
       login.php レスポンシブ レスポンシブ
@@ -453,4 +499,11 @@ input[type="password"]::placeholder {
     width: 100%;
     margin-top: 5px;
     padding: 10px;
+}
+
+/*-------------------------------------------
+      keijiban.php レスポンシブ
+      -------------------------------------------*/
+.kakikomilink {
+    padding-bottom: 10%;
 }
