新規会員登録DB接続完了各種設定済み次はログインページ作成

--- a/server/css/style.css
+++ b/server/css/style.css
@@ -415,6 +415,13 @@ input[type="password"]::placeholder {
     cursor: pointer; */
 }
 
+.errors li {
+    margin-top: 5px;
+    color: #ec008c;
+    text-align: center;
+    list-style: none;
+}
+
 /*-------------------------------------------
       login.php
       -------------------------------------------*/
