--- a/server/css/style.css
+++ b/server/css/style.css
@@ -83,6 +83,40 @@ li {
     opacity: 0.7;
 }
 
+.right_content {
+    display: flex;
+}
+
+.login_info {
+    margin-right: 10px;
+    align-items: center;
+    display: flex;
+}
+
+.login_info p {
+    margin-right: 10px;
+    font-size: 17px;
+    color: #24292e;
+}
+
+.header_logout_button {
+    display: flex;
+  justify-content: flex-end;
+    font-size: 15px;
+    color: #24292e;
+    text-decoration: none;
+    margin-right: 2px;
+}
+
+/* .header_login_button {
+    display: flex;
+    align-items: right;
+    font-size: 20px;
+    color: navy;
+    text-decoration: none;
+    margin-right: 10px;
+} */
+
 /*-------------------------------------------
 Mainvisual
 -------------------------------------------*/
