--- a/server/css/style.css
+++ b/server/css/style.css
@@ -573,6 +573,36 @@ input[type="password"]::placeholder {
 }
 
 /*-------------------------------------------
+      mypage.php
+      -------------------------------------------*/
+.content {
+    width: 50%;
+    margin: 6vh auto 0;
+}
+
+.button {
+    margin-top: 10px;
+    display: flex;
+    justify-content: flex-end;
+}
+.edit_button {
+    font-size: 18px;
+    border-radius: 18px;
+    padding: 5px 30px;
+    background: #39B54A;
+    text-decoration: none;
+    color: #FFFFFF;
+}
+.delete_button {
+    font-size: 18px;
+    border-radius: 18px;
+    padding: 5px 30px;
+    background: #CCCCCC;
+    margin-left: 10px;
+    color: #FFFFFF;
+}
+
+/*-------------------------------------------
       signup.php レスポンシブ
       -------------------------------------------*/
 .signup_content {
